@@ -3,6 +3,10 @@
 use strict; use warnings FATAL => 'all';
 use Test::More 0.88;
 
+BEGIN {
+  Test::More::plan(skip_all => 'SDF login not working');
+}
+
 BEGIN { use_ok( 'Net::CLI::Interact') }
 
 my $s = Net::CLI::Interact->new(
