@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+  * Make command removal substitute params as well (M. Perry)
+
 2.131260  2013-05-06 20:29:38 Europe/London
 
   * Fix for applying default timeout
